LU-442 assert failed in osc_set_lock_data_with_check()

In osc_enqueue_base(), the checking to l_ast_data of dlm lock isn't
protected by proper lock, which might cause assertion failure in
following osc_set_lock_data_with_check() when there are cocurrent
callers.

Signed-off-by: Niu Yawei <niu@whamcloud.com>
Change-Id: Idb2312003e93f4ab0687ed5b7e932de77b23efb7
Reviewed-on: http://review.whamcloud.com/993
Tested-by: Hudson
Reviewed-by: Jinshan Xiong <jay@whamcloud.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>